# memdex

./: .gitignore  README.md  pyproject.toml  requirements.txt
memdex/: __init__.py  clients.py  config.py  metadata.py
